--- a/styles/css/vtex.store-components.css
+++ b/styles/css/vtex.store-components.css
@@ -8,8 +8,6 @@
     max-width: 1260px;
     margin: 0 auto;
     padding: 0 auto;
-
-
 }
 
 .infoCardCallActionContainer :global(.vtex-button) {
@@ -28,11 +26,11 @@
 }
 
 .infoCardContainer--vintage {
-    background-color: #EDCFD1
+    background-color: #EDCFD1;
   }
 
   .infoCardContainer--metal {
-    background-color: #e1e1e1
+    background-color: #e1e1e1;
   }
 
   
