--- a/styles/css/vtex.store-components.css
+++ b/styles/css/vtex.store-components.css
@@ -9,6 +9,12 @@
     margin: 0 auto;
     padding: 0 auto;
 }
+.infoCardContainer{
+    max-width: 1260px;
+    margin: 0 auto;
+    padding: 0;
+    
+}
 
 .infoCardCallActionContainer :global(.vtex-button) {
     color: white;
